--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="contact-info-item">
               <h3 class="mb-3 text-white">Say hello</h3>
               <p class="footer-text mb-0"><a href="tel:+8801793685750">+8801793685750</a></p>
-              <p><a href="mailto:hello@company.co">khirulislam5750@gmail.com</a></p>
+              <p><a href="mailto:khirulislam5750@gmail.com">khirulislam5750@gmail.com</a></p>
             </div>
 
             <ul class="social-links">
