projects details added

--- a/index.html
+++ b/index.html
@@ -192,16 +192,93 @@
           <div class="owl-carousel owl-theme">
             <div class="item">
               <div class="project-info">
+                <div class="project_details">
+                  <p>
+                    <b>Pet Adoption Platform</b><br>
+                    A web-based platform developed using Django and Django REST Framework, allowing users to browse and
+                    adopt pets, manage requests, and update profiles. The platform includes features such as user
+                    authentication, pet listings, and request management.
+                  </p>
+                  <p>
+                    <b>Technology Used</b>
+                    <br>
+                    <span class="badge badge-secondary">Python</span>
+                    <span class="badge badge-secondary">Django</span> 
+                    <span class="badge badge-secondary">Django REST Framework</span>
+                    <span class="badge badge-secondary">HTML</span>
+                    <span class="badge badge-secondary">CSS</span>
+                    <span class="badge badge-secondary">JavaScript</span>
+                    <span class="badge badge-secondary">Bootstrap</span>
+                    <span class="badge badge-secondary">PostgreSQL</span>
+                  </p>
+                  <p>
+                    <b>Links</b><br>
+                    Live: <a href="https://pawgle.netlify.app" target="_blank">pawgle.netlify.app</a><br>
+                    Fronend GitHub: <a href="https://github.com/MrTuzzO/Pawgle" target="_blank">github.com/MrTuzzO/Pawgle</a> <br>
+                    Backend GitHub: <a href="https://github.com/MrTuzzO/Pet_Adoption_BackendDRF" target="_blank">github.com/MrTuzzO/Pet_Adoption_BackendDRF</a>
+                  </p>
+                </div>
                 <img src="images/project/pawgle.png" class="img-fluid" alt="project image">
               </div>
             </div>
             <div class="item">
               <div class="project-info">
+                <div class="project_details">
+                  <p>
+                    <b>Vaccination Management System</b><br>
+                    A web-based system developed using Django and Django REST Framework to manage vaccination campaigns,
+                    patient profiles, and dose bookings. The system includes features such as user authentication, dose
+                    scheduling, and patient management.
+                  </p>
+                  <p>
+                    <b>Technology Used</b>
+                    <br>
+                    <span class="badge badge-secondary">Python</span>
+                    <span class="badge badge-secondary">Django</span> 
+                    <span class="badge badge-secondary">Django REST Framework</span>
+                    <span class="badge badge-secondary">HTML</span>
+                    <span class="badge badge-secondary">CSS</span>
+                    <span class="badge badge-secondary">JavaScript</span>
+                    <span class="badge badge-secondary">Bootstrap</span>
+                    <span class="badge badge-secondary">PostgreSQL</span>
+                  </p>
+                  <p>
+                    <b>Links</b> <br>
+                    Live Link: <a href="https://vaxcare.netlify.app" target="_blank">vaxcare.netlify.app</a> <br>
+                    Fronend GitHub: <a href="https://github.com/MrTuzzO/Vaccination-Management-System" target="_blank">github.com/MrTuzzO/Vaccination-Management-System</a> <br>
+                    Backend GitHub: <a href="https://github.com/MrTuzzO/Vaccination-Management-System-Backend" target="_blank">github.com/MrTuzzO/Vaccination-Management-System-Backend</a>
+                  </p>
+                </div>
                 <img src="images/project/vaxcare.png" class="img-fluid" alt="project image">
               </div>
             </div>
             <div class="item">
               <div class="project-info">
+                <div class="project_details">
+                  <p>
+                    <b>Library Management System</b><br>
+                    A web-based library management system developed using Django and Django REST Framework to manage
+                    library operations, including book management, user authentication, and borrowing/returning books.
+                    The system includes features such as user roles, book search, and transaction history.
+                  </p>
+                  <p>
+                    <b>Technology Used</b>
+                    <br>
+                    <span class="badge badge-secondary">Python</span>
+                    <span class="badge badge-secondary">Django</span> 
+                    <span class="badge badge-secondary">HTML</span>
+                    <span class="badge badge-secondary">CSS</span>
+                    <span class="badge badge-secondary">JavaScript</span>
+                    <span class="badge badge-secondary">Bootstrap</span>
+                    <span class="badge badge-secondary">sqlite</span>
+                  </p>
+                  <p>
+                    <b>Links</b>
+                    <br>
+                    Live Link: <a href="https://library-management-system-xobv.onrender.com" target="_blank">library-management-system-xobv.onrender.com</a> <br>
+                    GitHub: <a href="https://github.com/MrTuzzO/Library_Management_System" target="_blank">github.com/MrTuzzO/Library_Management_System</a>
+                  </p>
+                </div>
                 <img src="images/project/library.png" class="img-fluid" alt="project image">
               </div>
             </div>
