projects details added

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="project_details">
                   <p>
                     <b>Library Management System</b><br>
-                    A web-based library management system developed using Django and Django REST Framework to manage
+                    A web-based library management system developed using Django to manage
                     library operations, including book management, user authentication, and borrowing/returning books.
                     The system includes features such as user roles, book search, and transaction history.
                   </p>
