--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               development.</p>
 
             <div class="custom-btn-group mt-4">
-              <a href="https://drive.google.com/file/d/1ip-KbacnX51ijJny610_IUooCrUgUbKd/view?usp=sharing"
+              <a href="https://drive.google.com/file/d/19akITXTWFPE1tbi2LmwYkWOBL6GfRDWZ/view?usp=drive_link"
                 target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
               <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
             </div>
