--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
             </h1>
 
-            <p>A passionate software developer  with hands-on experience in Django REST Framework and API
+            <p>A passionate software developer with hands-on experience in Django REST Framework and API
               development.</p>
 
             <div class="custom-btn-group mt-4">
@@ -105,18 +105,21 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-4 col-md-12 text-center order-2 order-lg-1">
-          <img src="images/undraw/profile.png" alt="Profile Image" class="img-fluid" style="max-width: 80%; padding: 10px;">
+          <img src="images/undraw/profile.png" alt="Profile Image" class="img-fluid"
+            style="max-width: 80%; padding: 10px;">
         </div>
         <div class="col-lg-8 col-md-12 order-1 order-lg-2">
           <div class="about-info">
             <h2 class="mb-4">About Me</h2>
             <p>
-              Hi, I'm <strong>Khirul Islam</strong>, a final year <b>Computer Science & Engineering</b> student and a passionate
-              <strong>Software developer</strong> from Bangladesh. I am currently pursuing my BSc in CSE at 
+              Hi, I'm <strong>Khirul Islam</strong>, a final year <b>Computer Science & Engineering</b> student and a
+              passionate
+              <strong>Software developer</strong> from Bangladesh. I am currently pursuing my BSc in CSE at
               <strong>Green University of Bangladesh</strong>, specializing in data mining and analysis.
             </p>
             <p>
-              I have experience in developing web applications using <b>Django and Django REST Framework</b>, with a strong
+              I have experience in developing web applications using <b>Django and Django REST Framework</b>, with a
+              strong
               focus on building scalable and user-friendly systems. I’m always eager to learn new technologies and
               enhance my skills to stay up-to-date with the latest industry trends.
             </p>
@@ -128,7 +131,7 @@
       </div>
     </div>
   </section>
-  
+
   <!-- Skills -->
   <section class="container py-5" id="skills">
     <div class="text-center mb-5">
@@ -203,7 +206,7 @@
                     <b>Technology Used</b>
                     <br>
                     <span class="badge badge-secondary">Python</span>
-                    <span class="badge badge-secondary">Django</span> 
+                    <span class="badge badge-secondary">Django</span>
                     <span class="badge badge-secondary">Django REST Framework</span>
                     <span class="badge badge-secondary">HTML</span>
                     <span class="badge badge-secondary">CSS</span>
@@ -214,8 +217,10 @@
                   <p>
                     <b>Links</b><br>
                     Live: <a href="https://pawgle.netlify.app" target="_blank">pawgle.netlify.app</a><br>
-                    Fronend GitHub: <a href="https://github.com/MrTuzzO/Pawgle" target="_blank">github.com/MrTuzzO/Pawgle</a> <br>
-                    Backend GitHub: <a href="https://github.com/MrTuzzO/Pet_Adoption_BackendDRF" target="_blank">github.com/MrTuzzO/Pet_Adoption_BackendDRF</a>
+                    Fronend GitHub: <a href="https://github.com/MrTuzzO/Pawgle"
+                      target="_blank">github.com/MrTuzzO/Pawgle</a> <br>
+                    Backend GitHub: <a href="https://github.com/MrTuzzO/Pet_Adoption_BackendDRF"
+                      target="_blank">github.com/MrTuzzO/Pet_Adoption_BackendDRF</a>
                   </p>
                 </div>
                 <img src="images/project/pawgle.png" class="img-fluid" alt="project image">
@@ -234,7 +239,7 @@
                     <b>Technology Used</b>
                     <br>
                     <span class="badge badge-secondary">Python</span>
-                    <span class="badge badge-secondary">Django</span> 
+                    <span class="badge badge-secondary">Django</span>
                     <span class="badge badge-secondary">Django REST Framework</span>
                     <span class="badge badge-secondary">HTML</span>
                     <span class="badge badge-secondary">CSS</span>
@@ -245,8 +250,10 @@
                   <p>
                     <b>Links</b> <br>
                     Live Link: <a href="https://vaxcare.netlify.app" target="_blank">vaxcare.netlify.app</a> <br>
-                    Fronend GitHub: <a href="https://github.com/MrTuzzO/Vaccination-Management-System" target="_blank">github.com/MrTuzzO/Vaccination-Management-System</a> <br>
-                    Backend GitHub: <a href="https://github.com/MrTuzzO/Vaccination-Management-System-Backend" target="_blank">github.com/MrTuzzO/Vaccination-Management-System-Backend</a>
+                    Fronend GitHub: <a href="https://github.com/MrTuzzO/Vaccination-Management-System"
+                      target="_blank">github.com/MrTuzzO/Vaccination-Management-System</a> <br>
+                    Backend GitHub: <a href="https://github.com/MrTuzzO/Vaccination-Management-System-Backend"
+                      target="_blank">github.com/MrTuzzO/Vaccination-Management-System-Backend</a>
                   </p>
                 </div>
                 <img src="images/project/vaxcare.png" class="img-fluid" alt="project image">
@@ -265,7 +272,7 @@
                     <b>Technology Used</b>
                     <br>
                     <span class="badge badge-secondary">Python</span>
-                    <span class="badge badge-secondary">Django</span> 
+                    <span class="badge badge-secondary">Django</span>
                     <span class="badge badge-secondary">HTML</span>
                     <span class="badge badge-secondary">CSS</span>
                     <span class="badge badge-secondary">JavaScript</span>
@@ -275,8 +282,10 @@
                   <p>
                     <b>Links</b>
                     <br>
-                    Live Link: <a href="https://library-management-system-xobv.onrender.com" target="_blank">library-management-system-xobv.onrender.com</a> <br>
-                    GitHub: <a href="https://github.com/MrTuzzO/Library_Management_System" target="_blank">github.com/MrTuzzO/Library_Management_System</a>
+                    Live Link: <a href="https://library-management-system-xobv.onrender.com"
+                      target="_blank">library-management-system-xobv.onrender.com</a> <br>
+                    GitHub: <a href="https://github.com/MrTuzzO/Library_Management_System"
+                      target="_blank">github.com/MrTuzzO/Library_Management_System</a>
                   </p>
                 </div>
                 <img src="images/project/library.png" class="img-fluid" alt="project image">
@@ -307,9 +316,22 @@
       <div class="row">
 
         <div class="col-lg-6 col-12">
-          <h2 class="mb-4">Achievements</h2>
+          <h2 class="mb-4">Experience</h2>
 
           <div class="timeline">
+
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                <span>2025</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>Backend Developer Intern<small>GenZSoft</small></h3>
+                <p>Developing scalable RESTful APIs using Django and DRF, integrating with a React frontend. Responsible
+                  for database design, authentication, and backend logic to support dynamic web applications.
+                  Collaborating with frontend teams to ensure seamless integration.</p>
+              </div>
+            </div>
+
             <div class="timeline-wrapper">
               <div class="timeline-yr">
                 <span>2025</span>
@@ -327,18 +349,6 @@
               </div>
             </div>
 
-            <div class="timeline-wrapper">
-              <div class="timeline-yr">
-                <span>2024</span>
-              </div>
-              <div class="timeline-info">
-                <h3><span>Problem Solving Experience</span><small></small></h3>
-                <p>I have honed my problem-solving skills through various coding challenges and algorithmic exercises on
-                  platforms like Codeforces, Codechef and, LeetCode enhancing my ability to solve complex problems
-                  efficiently.
-                </p>
-              </div>
-            </div>
 
             <div class="timeline-wrapper">
               <div class="timeline-yr">
